# ClassKit_Pub

./: ClassKit.ipr  ClassKit.iws
audio-capture-main/: ApplicationLoopback.cpp  CMakeLists.txt  CaptureLibrary.cpp  CaptureLibrary.h  LoopbackCapture.cpp  LoopbackCapture.h  Queue.cpp  Queue.h
src/com/melloware/jintellitype/: JIntellitype.java  JIntellitypeDemo.java
src/net/xiaoyu233/classkit/: ClassLauncher.java  ClassOpener.java  PosManagerMain.java  RandomChoose.java  ResourcePlayerLauncher.java
src/net/xiaoyu233/classkit/api/: ChangeHistory.java  Class.java  ClassManager.java  ClassSize.java  IAreaProvider.java  IPositionValidator.java  IStudentListener.java  ITargetValidator.java  Lesson.java  LessonTable.java  Subject.java  TimeProvider.java  TimeTable.java
src/net/xiaoyu233/classkit/av/: AVListener.java  AudioListener.java  AudioManager.java  AudioProvider.java  AudioReplayer.java  AudioSample.java  FrameDisplayer.java  FrameReceiver.java  FrameRecorder.java  FrameStreamer.java  ImageProcessing.java  ImageProcessor.java  ResourcePlayerGrabber.java  SwitchDataLine.java  VideoListener.java  VideoProvider.java  WenDaoGrabber.java
src/net/xiaoyu233/classkit/config/: AudioPlaybackConfig.java  Codec.java  Config.java  ConfigCategory.java  ConfigEntry.java  ConfigRegistry.java  DisplayerConfig.java  EmptyConfig.java  PosManagerConfig.java  RecorderConfig.java  ResolutionConfig.java  StreamingConfig.java  ToolConfig.java  VolumeToolConfig.java  WenDaoConfig.java
src/net/xiaoyu233/classkit/event/: ClassBeginEvent.java  ClassEvent.java  ClassOverEvent.java  (+3 more)
(+97 files in other folders)
